NULL =

vapidir = $(datadir)/vala/vapi

dist_vapi_DATA = \
	libtinymail-1.0.vapi \
	libtinymail-camel-1.0.deps \
	libtinymail-camel-1.0.vapi \
	libtinymail-gnome-desktop-1.0.deps \
	libtinymail-gnome-desktop-1.0.vapi \
	libtinymailui-1.0.deps \
	libtinymailui-1.0.vapi \
	libtinymailui-gtk-1.0.deps \
	libtinymailui-gtk-1.0.vapi \
	$(NULL)

